--- a/configuration/config-pdi-ci/.kettle/.spoonrc
+++ b/configuration/config-pdi-ci/.kettle/.spoonrc
@@ -1,5 +1,5 @@
 #Kettle Properties file
-#Tue Nov 20 08:06:38 EST 2018
+#Wed Nov 21 11:48:51 EST 2018
 AskAboutReplacingDatabases=N
 AutoCollapseCoreObjectsTree=Y
 AutoSave=N
@@ -83,22 +83,24 @@ SashWeight1=183
 SashWeight2=816
 SaveConfirmation=Y
 SaveOnlyUsedConnectionsToXML=Y
-ScreenName100=Script Values / Mod
-ScreenName101=Execute SQL statements
-ScreenName102=Abort job...
-ScreenName103=User Defined Java Expression
-ScreenName104=Simple SQL Editor
-ScreenName105=Job mail details
-ScreenName106=CSV Input
-ScreenName107=Simple SQL editor
+ScreenName100=Error fields
+ScreenName101=Script Values / Mod
+ScreenName102=Execute SQL statements
+ScreenName103=Abort job...
+ScreenName104=User Defined Java Expression
+ScreenName105=Simple SQL Editor
+ScreenName106=Job mail details
+ScreenName107=CSV Input
 ScreenName108=Transformation
-ScreenName109=Set variables...
+ScreenName109=Simple SQL editor
 ScreenName10=Job Executor
 ScreenName110=Step description dialog
-ScreenName111=Repository information
-ScreenName112=Logging text
-ScreenName113=Sorted Merge
-ScreenName114=Select info type
+ScreenName111=Set variables...
+ScreenName112=Evaluate rows number in a table ...
+ScreenName113=Repository information
+ScreenName114=Logging text
+ScreenName115=Select info type
+ScreenName116=Sorted Merge
 ScreenName11=HTTP Client
 ScreenName12=Database Explorer
 ScreenName13=Available Paths
@@ -165,10 +167,10 @@ ScreenName68=Get data from XML
 ScreenName69=Text file input
 ScreenName6=Nr of lines to view.  0 means all lines.
 ScreenName70=Feature list
-ScreenName71=Notes
-ScreenName72=Database Explorer on [CA Reporting]
-ScreenName73=Split transformation
-ScreenName74=Hop\: From --> To
+ScreenName71=Database Explorer on [CA Reporting]
+ScreenName72=Notes
+ScreenName73=Hop\: From --> To
+ScreenName74=Split transformation
 ScreenName75=Load content file
 ScreenName76=Group By
 ScreenName77=Set Environment Variables
@@ -181,21 +183,21 @@ ScreenName82=Unreachable URI
 ScreenName83=Kettle options...
 ScreenName84=Connection information
 ScreenName85=Warning\!
-ScreenName86=Unexpected error during preview
-ScreenName87=Execute a shell script ...
+ScreenName86=Execute a shell script ...
+ScreenName87=Unexpected error during preview
 ScreenName88=Error Details
-ScreenName89=Preview size
+ScreenName89=Table input
 ScreenName8=Sort rows
-ScreenName90=Table input
+ScreenName90=Preview size
 ScreenName91=Kettle Options
-ScreenName92=Database Value Lookup
-ScreenName93=Add constant values
-ScreenName94=Error
-ScreenName95=Repository explorer on [SpoonData]
+ScreenName92=Add constant values
+ScreenName93=Database Value Lookup
+ScreenName94=Repository explorer on [SpoonData]
+ScreenName95=Error
 ScreenName96=Wait for
-ScreenName97=Generate Rows
-ScreenName98=Database Explorer on [Spoon]
-ScreenName99=Error fields
+ScreenName97=Check Db connections ...
+ScreenName98=Generate Rows
+ScreenName99=Database Explorer on [Spoon]
 ScreenName9=Cluster schema
 ShadowSize54=0
 ShowBrandingGraphics=N
@@ -210,22 +212,24 @@ ShowRepositoriesAtStartup=N
 ShowTips=Y
 ShowToolTips=Y
 ShowWelcomePageOnStartup=Y
-SizeH100=1040
-SizeH101=714
-SizeH102=135
-SizeH103=318
-SizeH104=482
-SizeH105=589
-SizeH106=599
-SizeH107=444
+SizeH100=249
+SizeH101=1040
+SizeH102=714
+SizeH103=135
+SizeH104=318
+SizeH105=482
+SizeH106=589
+SizeH107=599
 SizeH108=720
-SizeH109=383
+SizeH109=444
 SizeH10=805
 SizeH110=159
-SizeH111=152
-SizeH112=592
-SizeH113=163
-SizeH114=561
+SizeH111=383
+SizeH112=539
+SizeH113=152
+SizeH114=592
+SizeH115=561
+SizeH116=163
 SizeH11=640
 SizeH12=400
 SizeH13=386
@@ -233,14 +237,14 @@ SizeH14=366
 SizeH15=904
 SizeH16=396
 SizeH17=129
-SizeH18=730
+SizeH18=718
 SizeH19=826
 SizeH1=454
 SizeH20=393
 SizeH21=1040
 SizeH22=437
 SizeH23=480
-SizeH24=889
+SizeH24=886
 SizeH25=387
 SizeH26=135
 SizeH27=541
@@ -292,10 +296,10 @@ SizeH68=646
 SizeH69=983
 SizeH6=106
 SizeH70=186
-SizeH71=345
-SizeH72=480
-SizeH73=379
-SizeH74=175
+SizeH71=480
+SizeH72=345
+SizeH73=175
+SizeH74=379
 SizeH75=456
 SizeH76=700
 SizeH77=348
@@ -308,21 +312,21 @@ SizeH82=324
 SizeH83=412
 SizeH84=400
 SizeH85=189
-SizeH86=579
-SizeH87=682
+SizeH86=682
+SizeH87=579
 SizeH88=904
-SizeH89=129
+SizeH89=704
 SizeH8=636
-SizeH90=704
+SizeH90=129
 SizeH91=648
-SizeH92=457
-SizeH93=229
-SizeH94=202
-SizeH95=480
+SizeH92=229
+SizeH93=457
+SizeH94=480
+SizeH95=202
 SizeH96=160
-SizeH97=330
-SizeH98=480
-SizeH99=249
+SizeH97=296
+SizeH98=330
+SizeH99=480
 SizeH9=177
 SizeMax100=N
 SizeMax101=N
@@ -340,6 +344,8 @@ SizeMax111=N
 SizeMax112=N
 SizeMax113=N
 SizeMax114=N
+SizeMax115=N
+SizeMax116=N
 SizeMax11=N
 SizeMax12=N
 SizeMax13=N
@@ -438,22 +444,24 @@ SizeMax97=N
 SizeMax98=N
 SizeMax99=N
 SizeMax9=N
-SizeW100=831
-SizeW101=771
-SizeW102=1067
-SizeW103=668
-SizeW104=557
-SizeW105=612
-SizeW106=754
-SizeW107=467
+SizeW100=668
+SizeW101=831
+SizeW102=771
+SizeW103=1067
+SizeW104=668
+SizeW105=557
+SizeW106=612
+SizeW107=754
 SizeW108=750
-SizeW109=606
+SizeW109=467
 SizeW10=620
 SizeW110=182
-SizeW111=495
-SizeW112=832
-SizeW113=254
-SizeW114=270
+SizeW111=606
+SizeW112=812
+SizeW113=495
+SizeW114=832
+SizeW115=270
+SizeW116=254
 SizeW11=670
 SizeW12=609
 SizeW13=296
@@ -468,9 +476,9 @@ SizeW20=663
 SizeW21=599
 SizeW22=469
 SizeW23=320
-SizeW24=1900
+SizeW24=1896
 SizeW25=745
-SizeW26=669
+SizeW26=710
 SizeW27=1920
 SizeW28=892
 SizeW29=162
@@ -520,10 +528,10 @@ SizeW68=1133
 SizeW69=1339
 SizeW6=362
 SizeW70=213
-SizeW71=646
-SizeW72=320
-SizeW73=924
-SizeW74=430
+SizeW71=320
+SizeW72=646
+SizeW73=430
+SizeW74=924
 SizeW75=1092
 SizeW76=737
 SizeW77=564
@@ -536,38 +544,40 @@ SizeW82=1074
 SizeW83=592
 SizeW84=570
 SizeW85=905
-SizeW86=1351
-SizeW87=582
+SizeW86=582
+SizeW87=1351
 SizeW88=849
-SizeW89=376
+SizeW89=872
 SizeW8=880
-SizeW90=872
+SizeW90=376
 SizeW91=746
-SizeW92=567
-SizeW93=857
-SizeW94=1093
-SizeW95=400
+SizeW92=857
+SizeW93=567
+SizeW94=400
+SizeW95=1093
 SizeW96=313
-SizeW97=857
-SizeW98=320
-SizeW99=668
+SizeW97=448
+SizeW98=857
+SizeW99=320
 SizeW9=242
-SizeX100=544
-SizeX101=574
-SizeX102=383
-SizeX103=626
-SizeX104=88
-SizeX105=654
-SizeX106=583
-SizeX107=808
+SizeX100=626
+SizeX101=544
+SizeX102=574
+SizeX103=383
+SizeX104=626
+SizeX105=88
+SizeX106=654
+SizeX107=583
 SizeX108=541
-SizeX109=538
+SizeX109=808
 SizeX10=650
 SizeX110=869
-SizeX111=44
-SizeX112=636
-SizeX113=833
-SizeX114=242
+SizeX111=538
+SizeX112=554
+SizeX113=44
+SizeX114=636
+SizeX115=242
+SizeX116=833
 SizeX11=625
 SizeX12=658
 SizeX13=837
@@ -634,10 +644,10 @@ SizeX68=427
 SizeX69=2089
 SizeX6=242
 SizeX70=853
-SizeX71=658
-SizeX72=286
-SizeX73=907
-SizeX74=88
+SizeX71=286
+SizeX72=658
+SizeX73=88
+SizeX74=907
 SizeX75=424
 SizeX76=591
 SizeX77=678
@@ -650,38 +660,40 @@ SizeX82=423
 SizeX83=176
 SizeX84=88
 SizeX85=507
-SizeX86=284
-SizeX87=669
+SizeX86=669
+SizeX87=284
 SizeX88=535
-SizeX89=772
+SizeX89=286
 SizeX8=520
-SizeX90=286
+SizeX90=772
 SizeX91=587
-SizeX92=88
-SizeX93=531
-SizeX94=413
-SizeX95=44
+SizeX92=531
+SizeX93=88
+SizeX94=44
+SizeX95=413
 SizeX96=803
-SizeX97=531
-SizeX98=154
-SizeX99=626
+SizeX97=736
+SizeX98=531
+SizeX99=154
 SizeX9=839
-SizeY100=0
-SizeY101=197
-SizeY102=383
-SizeY103=375
-SizeY104=88
-SizeY105=225
-SizeY106=308
-SizeY107=434
+SizeY100=395
+SizeY101=0
+SizeY102=197
+SizeY103=383
+SizeY104=375
+SizeY105=88
+SizeY106=225
+SizeY107=308
 SizeY108=200
-SizeY109=473
+SizeY109=434
 SizeY10=130
 SizeY110=440
-SizeY111=44
-SizeY112=470
-SizeY113=518
-SizeY114=242
+SizeY111=473
+SizeY112=213
+SizeY113=44
+SizeY114=470
+SizeY115=242
+SizeY116=518
 SizeY11=200
 SizeY12=283
 SizeY13=327
@@ -713,7 +725,7 @@ SizeY36=455
 SizeY37=220
 SizeY38=471
 SizeY39=395
-SizeY3=180
+SizeY3=181
 SizeY40=31
 SizeY41=264
 SizeY42=286
@@ -748,10 +760,10 @@ SizeY68=227
 SizeY69=65
 SizeY6=242
 SizeY70=390
-SizeY71=360
-SizeY72=286
-SizeY73=685
-SizeY74=88
+SizeY71=286
+SizeY72=360
+SizeY73=88
+SizeY74=685
 SizeY75=292
 SizeY76=133
 SizeY77=395
@@ -764,21 +776,21 @@ SizeY82=358
 SizeY83=176
 SizeY84=88
 SizeY85=425
-SizeY86=230
-SizeY87=179
+SizeY86=179
+SizeY87=230
 SizeY88=31
-SizeY89=455
+SizeY89=286
 SizeY8=202
-SizeY90=286
+SizeY90=455
 SizeY91=196
-SizeY92=88
-SizeY93=405
-SizeY94=440
-SizeY95=44
+SizeY92=405
+SizeY93=88
+SizeY94=44
+SizeY95=440
 SizeY96=440
-SizeY97=355
-SizeY98=154
-SizeY99=395
+SizeY97=373
+SizeY98=355
+SizeY99=154
 SizeY9=511
 TabColorB54=64
 TabColorB=255
@@ -789,13 +801,13 @@ TabColorR=200
 TipNr=1
 UseDBCache=Y
 filetype10=Trans
-filetype1=Trans
-filetype2=Trans
-filetype3=Trans
+filetype1=Job
+filetype2=Job
+filetype3=Job
 filetype4=Job
-filetype5=Trans
+filetype5=Job
 filetype6=Trans
-filetype7=Job
+filetype7=Trans
 filetype8=Trans
 filetype9=Job
 lastdir10=/
@@ -809,15 +821,15 @@ lastdir7=
 lastdir8=
 lastdir9=
 lastfile10=
-lastfile1=/home/demouser/Desktop/projects/framework/tests/tr_test_executor.ktr
-lastfile2=/home/demouser/Desktop/projects/framework/tests/tr_execute_test_trans.ktr
-lastfile3=/home/demouser/Desktop/projects/framework/tests/tr_execute_test_job.ktr
-lastfile4=/home/demouser/Desktop/projects/framework/tests/jb_main_test_executor.kjb
-lastfile5=/home/demouser/Desktop/projects/framework/tests/test_executor.ktr
-lastfile6=/home/demouser/Desktop/projects/framework/tests/execute_test_job.ktr
-lastfile7=/home/demouser/Desktop/projects/etl/sales_dwh/content-pdi/jb_main_sales_dwh_staging.kjb
-lastfile8=/home/demouser/Desktop/projects/framework/tests/execute_test_trans.ktr
-lastfile9=/home/demouser/Desktop/projects/framework/content-pdi/execution/jb_launcher.kjb
+lastfile1=/home/demouser/git/di-framework/framework/tests/jb_main_test_executor.kjb
+lastfile2=/home/demouser/git/di-framework/etl/sales_dwh/tests/jb_main_sales_dwh_staging_test.kjb
+lastfile3=/home/demouser/git/di-framework/etl/sales_dwh/tests/jb_environment_test.kjb
+lastfile4=/home/demouser/git/di-framework/framework/content-pdi/execution/jb_work_unit.kjb
+lastfile5=/home/demouser/git/di-framework/framework/content-pdi/utilities/jb_load_job_env.kjb
+lastfile6=/home/demouser/Desktop/projects/framework/tests/tr_test_executor.ktr
+lastfile7=/home/demouser/Desktop/projects/framework/tests/tr_execute_test_trans.ktr
+lastfile8=/home/demouser/Desktop/projects/framework/tests/tr_execute_test_job.ktr
+lastfile9=/home/demouser/Desktop/projects/framework/tests/jb_main_test_executor.kjb
 lastfiles=9
 lastrepo10=Spoon Data
 lastrepo1=
@@ -864,7 +876,7 @@ tabdir7=/
 tabdir8=/
 tabdir9=/
 tabfile10=C\:/Users/braymaekers/Desktop/project_setup_bp/framework/content-pdi/control/tr_work_unit_start_check.ktr
-tabfile1=/home/demouser/Desktop/projects/framework/tests/tr_test_executor.ktr
+tabfile1=/home/demouser/git/di-framework/etl/sales_dwh/tests/jb_environment_test.kjb
 tabfile2=/home/demouser/Desktop/projects/framework/tests/tr_test_executor.ktr
 tabfile3=/home/demouser/Desktop/projects/framework/tests/tr_execute_test_trans.ktr
 tabfile4=C\:/Users/braymaekers/Documents/HCP Anywhere/Project Setup BP/projects/framework/content-pdi/utilities/jb_load_job_env.kjb
@@ -915,7 +927,7 @@ tabrepname7=
 tabrepname8=
 tabrepname9=
 tabtype10=Trans
-tabtype1=Trans
+tabtype1=Job
 tabtype2=Trans
 tabtype3=Trans
 tabtype4=Job
