test_executor update
Removed P_WORKSPACE_DIR

--- a/configuration/config-pdi-local/.kettle/.spoonrc
+++ b/configuration/config-pdi-local/.kettle/.spoonrc
@@ -1,5 +1,5 @@
 #Kettle Properties file
-#Tue Nov 20 14:23:24 CET 2018
+#Thu Nov 22 16:39:02 CET 2018
 AskAboutReplacingDatabases=N
 AutoCollapseCoreObjectsTree=Y
 AutoSave=N
@@ -298,7 +298,7 @@ SizeH142=773
 SizeH143=528
 SizeH144=729
 SizeH14=354
-SizeH15=1040
+SizeH15=1056
 SizeH16=730
 SizeH17=159
 SizeH18=999
@@ -442,7 +442,7 @@ SizeMax142=N
 SizeMax143=N
 SizeMax144=N
 SizeMax14=N
-SizeMax15=N
+SizeMax15=Y
 SizeMax16=N
 SizeMax17=N
 SizeMax18=N
@@ -586,7 +586,7 @@ SizeW142=1920
 SizeW143=635
 SizeW144=1060
 SizeW14=408
-SizeW15=1920
+SizeW15=1936
 SizeW16=750
 SizeW17=316
 SizeW18=940
@@ -730,7 +730,7 @@ SizeX142=0
 SizeX143=642
 SizeX144=618
 SizeX14=2476
-SizeX15=0
+SizeX15=-8
 SizeX16=522
 SizeX17=802
 SizeX18=558
@@ -874,7 +874,7 @@ SizeY142=133
 SizeY143=336
 SizeY144=308
 SizeY14=678
-SizeY15=0
+SizeY15=-8
 SizeY16=287
 SizeY17=440
 SizeY18=55
@@ -977,13 +977,13 @@ TabColorR=200
 TipNr=1
 UseDBCache=Y
 filetype10=Trans
-filetype1=Trans
+filetype1=Job
 filetype2=Trans
 filetype3=Trans
 filetype4=Trans
-filetype5=Job
+filetype5=Trans
 filetype6=Trans
-filetype7=Trans
+filetype7=Job
 filetype8=Trans
 filetype9=Trans
 lastdir10=/
@@ -997,15 +997,15 @@ lastdir7=
 lastdir8=
 lastdir9=
 lastfile10=
-lastfile1=C\:\\Users\\braymaekers\\Documents\\HCP Anywhere\\Project Setup BP\\projects\\framework\\tests\\test_executor.ktr
-lastfile2=C\:\\Users\\braymaekers\\Documents\\HCP Anywhere\\Projects\\Nordea\\PDI and HCI\\Nordea HCI\\tr_hci_api_call.ktr
-lastfile3=C\:\\Users\\braymaekers\\Documents\\HCP Anywhere\\Projects\\Nordea\\PDI and HCI\\Nordea HCI\\upd.ktr
-lastfile4=C\:/Users/braymaekers/Documents/HCP Anywhere/Project Setup BP/projects/framework/tests/execute_test_job.ktr
-lastfile5=C\:\\Users\\braymaekers\\Documents\\HCP Anywhere\\Project Setup BP\\projects\\framework\\content-pdi\\tests\\transformation_executor.kjb
-lastfile6=C\:/Users/braymaekers/Documents/HCP Anywhere/Project Setup BP/projects/framework/content-pdi/tests/execute_test_trans.ktr
-lastfile7=C\:/Users/braymaekers/Documents/HCP Anywhere/Project Setup BP/projects/framework/content-pdi/tests/execute_test_job.ktr
-lastfile8=C\:\\Users\\braymaekers\\Documents\\HCP Anywhere\\Project Setup BP\\projects\\framework\\content-pdi\\tests\\test_executor.ktr
-lastfile9=C\:\\Users\\braymaekers\\Documents\\HCP Anywhere\\Project Setup BP\\projects\\framework\\content-pdi\\tests\\execute_test_job.ktr
+lastfile1=C\:\\Users\\braymaekers\\Documents\\HCP Anywhere\\Project Setup BP\\projects\\framework\\tests\\jb_main_test_executor.kjb
+lastfile2=C\:/Users/braymaekers/Documents/GitHub/di-framework/framework/tests/tr_test_executor.ktr
+lastfile3=C\:\\Users\\braymaekers\\Documents\\HCP Anywhere\\Project Setup BP\\projects\\framework\\tests\\test_executor.ktr
+lastfile4=C\:\\Users\\braymaekers\\Documents\\HCP Anywhere\\Projects\\Nordea\\PDI and HCI\\Nordea HCI\\tr_hci_api_call.ktr
+lastfile5=C\:\\Users\\braymaekers\\Documents\\HCP Anywhere\\Projects\\Nordea\\PDI and HCI\\Nordea HCI\\upd.ktr
+lastfile6=C\:/Users/braymaekers/Documents/HCP Anywhere/Project Setup BP/projects/framework/tests/execute_test_job.ktr
+lastfile7=C\:\\Users\\braymaekers\\Documents\\HCP Anywhere\\Project Setup BP\\projects\\framework\\content-pdi\\tests\\transformation_executor.kjb
+lastfile8=C\:/Users/braymaekers/Documents/HCP Anywhere/Project Setup BP/projects/framework/content-pdi/tests/execute_test_trans.ktr
+lastfile9=C\:/Users/braymaekers/Documents/HCP Anywhere/Project Setup BP/projects/framework/content-pdi/tests/execute_test_job.ktr
 lastfiles=9
 lastrepo10=Spoon Data
 lastrepo1=
@@ -1052,8 +1052,8 @@ tabdir7=/
 tabdir8=/
 tabdir9=/
 tabfile10=C\:/Users/braymaekers/Desktop/project_setup_bp/framework/content-pdi/control/tr_work_unit_start_check.ktr
-tabfile1=C\:\\Users\\braymaekers\\Documents\\HCP Anywhere\\Project Setup BP\\projects\\framework\\tests\\test_executor.ktr
-tabfile2=C\:\\Users\\braymaekers\\Documents\\HCP Anywhere\\Projects\\Nordea\\PDI and HCI\\Nordea HCI\\upd.ktr
+tabfile1=C\:\\Users\\braymaekers\\Documents\\HCP Anywhere\\Project Setup BP\\projects\\framework\\tests\\jb_main_test_executor.kjb
+tabfile2=C\:/Users/braymaekers/Documents/GitHub/di-framework/framework/tests/tr_test_executor.ktr
 tabfile3=C\:/Users/braymaekers/Documents/HCP Anywhere/Project Setup BP/projects/framework/content-pdi/tests/execute_test_job.ktr
 tabfile4=C\:/Users/braymaekers/Documents/HCP Anywhere/Project Setup BP/projects/framework/content-pdi/tests/execute_test_trans.ktr
 tabfile5=C\:\\Users\\braymaekers\\Documents\\HCP Anywhere\\Project Setup BP\\projects\\etl\\sales_dwh\\tests\\jb_main_sales_dwh_staging_test.kjb
@@ -1061,7 +1061,7 @@ tabfile6=C\:\\Users\\braymaekers\\Documents\\HCP Anywhere\\Project Setup BP\\pro
 tabfile7=C\:\\Users\\braymaekers\\Documents\\HCP Anywhere\\Project Setup BP\\projects\\etl\\sales_dwh\\content-pdi\\staging\\tr_stg_customer.ktr
 tabfile8=C\:/Users/braymaekers/Documents/HCP Anywhere/Project Setup BP/projects/framework/content-pdi/control/tr_upd_job_control_job.ktr
 tabfile9=C\:/Users/braymaekers/Desktop/project_setup_bp/framework/content-pdi/execution/jb_work_unit.kjb
-tabfiles=0
+tabfiles=2
 tabopened10=Y
 tabopened1=Y
 tabopened2=Y
@@ -1103,7 +1103,7 @@ tabrepname7=
 tabrepname8=
 tabrepname9=
 tabtype10=Trans
-tabtype1=Trans
+tabtype1=Job
 tabtype2=Trans
 tabtype3=Trans
 tabtype4=Trans
