--- a/configuration/config-pdi-local/.kettle/.spoonrc
+++ b/configuration/config-pdi-local/.kettle/.spoonrc
@@ -1,5 +1,5 @@
 #Kettle Properties file
-#Thu Nov 22 17:19:38 CET 2018
+#Sat Dec 08 18:48:03 CET 2018
 AskAboutReplacingDatabases=N
 AutoCollapseCoreObjectsTree=Y
 AutoSave=N
@@ -298,7 +298,7 @@ SizeH142=773
 SizeH143=528
 SizeH144=729
 SizeH14=354
-SizeH15=1056
+SizeH15=1040
 SizeH16=730
 SizeH17=159
 SizeH18=999
@@ -442,7 +442,7 @@ SizeMax142=N
 SizeMax143=N
 SizeMax144=N
 SizeMax14=N
-SizeMax15=Y
+SizeMax15=N
 SizeMax16=N
 SizeMax17=N
 SizeMax18=N
@@ -586,7 +586,7 @@ SizeW142=1920
 SizeW143=635
 SizeW144=1060
 SizeW14=408
-SizeW15=1936
+SizeW15=1920
 SizeW16=750
 SizeW17=316
 SizeW18=940
@@ -730,7 +730,7 @@ SizeX142=0
 SizeX143=642
 SizeX144=618
 SizeX14=2476
-SizeX15=-8
+SizeX15=0
 SizeX16=522
 SizeX17=802
 SizeX18=558
@@ -874,7 +874,7 @@ SizeY142=133
 SizeY143=336
 SizeY144=308
 SizeY14=678
-SizeY15=-8
+SizeY15=0
 SizeY16=287
 SizeY17=440
 SizeY18=55
