--- a/configuration/config-pdi-local/env.conf
+++ b/configuration/config-pdi-local/env.conf
@@ -1,3 +1,3 @@
-PENTAHO_HOME=C:/Pentaho810
-PENTAHO_JAVA_HOME=C:/Pentaho810/java
+PENTAHO_HOME=/opt/pentaho810
+PENTAHO_JAVA_HOME=/opt/pentaho810/java
 PENTAHO_DI_JAVA_OPTIONS="-Xms1024m -Xmx2048m"
