--- a/configuration/config-pdi-local-linux/.kettle/.spoonrc
+++ b/configuration/config-pdi-local-linux/.kettle/.spoonrc
@@ -1,5 +1,5 @@
 #Kettle Properties file
-#Sun Dec 09 20:17:07 CET 2018
+#Mon Dec 24 11:32:26 CET 2018
 AskAboutReplacingDatabases=N
 AutoCollapseCoreObjectsTree=Y
 AutoSave=N
@@ -298,7 +298,7 @@ SizeH142=773
 SizeH143=528
 SizeH144=729
 SizeH14=354
-SizeH15=1040
+SizeH15=969
 SizeH16=730
 SizeH17=159
 SizeH18=999
@@ -442,7 +442,7 @@ SizeMax142=N
 SizeMax143=N
 SizeMax144=N
 SizeMax14=N
-SizeMax15=N
+SizeMax15=Y
 SizeMax16=N
 SizeMax17=N
 SizeMax18=N
@@ -586,7 +586,7 @@ SizeW142=1920
 SizeW143=635
 SizeW144=1060
 SizeW14=408
-SizeW15=1920
+SizeW15=1680
 SizeW16=750
 SizeW17=316
 SizeW18=940
@@ -874,7 +874,7 @@ SizeY142=133
 SizeY143=336
 SizeY144=308
 SizeY14=678
-SizeY15=0
+SizeY15=23
 SizeY16=287
 SizeY17=440
 SizeY18=55
