--- a/configuration/config-pdi-local/.kettle/.spoonrc
+++ b/configuration/config-pdi-local/.kettle/.spoonrc
@@ -1,5 +1,5 @@
 #Kettle Properties file
-#Mon Dec 10 07:39:24 CET 2018
+#Tue Jan 15 14:24:58 CET 2019
 AskAboutReplacingDatabases=N
 AutoCollapseCoreObjectsTree=Y
 AutoSave=N
@@ -91,55 +91,56 @@ SashWeight1=183
 SashWeight2=816
 SaveConfirmation=Y
 SaveOnlyUsedConnectionsToXML=Y
-ScreenName100=Select / Rename values
-ScreenName101=Join rows
-ScreenName102=REST Client
-ScreenName103=Concat fields
-ScreenName104=View message
-ScreenName105=Select repository object
-ScreenName106=Detect empty stream
-ScreenName107=Checks if a file exists ...
-ScreenName108=XML
-ScreenName109=Add constants
+ScreenName100=Load content file
+ScreenName101=Select / Rename values
+ScreenName102=Join rows
+ScreenName103=REST Client
+ScreenName104=Concat fields
+ScreenName105=View message
+ScreenName106=Select repository object
+ScreenName107=Detect empty stream
+ScreenName108=Checks if a file exists ...
+ScreenName109=XML
 ScreenName10=Insert / Update
-ScreenName110=Merge rows
-ScreenName111=Cluster schema
-ScreenName112=File Metadata
-ScreenName113=Run Options
-ScreenName114=Modified JavaScript value
-ScreenName115=Enter preview size
-ScreenName116=Functions\:
-ScreenName117=Content of first file
-ScreenName118=Available Paths
-ScreenName119=Clustering schema dialog
+ScreenName110=Add constants
+ScreenName111=Merge rows
+ScreenName112=Cluster schema
+ScreenName113=File Metadata
+ScreenName114=Run Options
+ScreenName115=Modified JavaScript value
+ScreenName116=Enter preview size
+ScreenName117=Functions\:
+ScreenName118=Content of first file
+ScreenName119=Available Paths
 ScreenName11=JSON input
-ScreenName120=Abort
-ScreenName121=Logging text
-ScreenName122=Execute a shell script ...
-ScreenName123=Database Explorer on [CA Reporting]
-ScreenName124=Select info type
-ScreenName125=Results of transformation checks
-ScreenName126=Add constant rows
-ScreenName127=Simple SQL editor
-ScreenName128=Split fields
-ScreenName129=Job executor
+ScreenName120=Clustering schema dialog
+ScreenName121=Abort
+ScreenName122=Logging text
+ScreenName123=Execute a shell script ...
+ScreenName124=Database Explorer on [CA Reporting]
+ScreenName125=Select info type
+ScreenName126=Results of transformation checks
+ScreenName127=Add constant rows
+ScreenName128=Simple SQL editor
+ScreenName129=Split fields
 ScreenName12=Error showing fixed wizard
-ScreenName130=Error
-ScreenName131=CSV file input
-ScreenName132=Formula
-ScreenName133=Update
-ScreenName134=Preview selection screen
-ScreenName135=Results of the SQL statements
-ScreenName136=Set variables...
-ScreenName137=Table input
-ScreenName138=Text file input
-ScreenName139=Database Explorer on [Spoon]
+ScreenName130=Job executor
+ScreenName131=Error
+ScreenName132=CSV file input
+ScreenName133=Formula
+ScreenName134=Update
+ScreenName135=Preview selection screen
+ScreenName136=Results of the SQL statements
+ScreenName137=Set variables...
+ScreenName138=Table input
+ScreenName139=Text file input
 ScreenName13=Select the servers
-ScreenName140=Add sequence
-ScreenName141=ERROR
-ScreenName142=Examine preview data
-ScreenName143=Job entry details for this transformation\:
-ScreenName144=CPython Script Executor
+ScreenName140=Database Explorer on [Spoon]
+ScreenName141=Add sequence
+ScreenName142=ERROR
+ScreenName143=Examine preview data
+ScreenName144=Job entry details for this transformation\:
+ScreenName145=CPython Script Executor
 ScreenName14=Excel output
 ScreenName15=Spoon
 ScreenName16=Job
@@ -228,12 +229,12 @@ ScreenName90=Step description dialog
 ScreenName91=Get file names
 ScreenName92=Database Connection
 ScreenName93=Kettle Options
-ScreenName94=Process files
-ScreenName95=Dummy (do nothing)
-ScreenName96=Abort job...
-ScreenName97=Error lines
-ScreenName98=Add constant values
-ScreenName99=Load content file
+ScreenName94=Shell
+ScreenName95=Process files
+ScreenName96=Dummy (do nothing)
+ScreenName97=Abort job...
+ScreenName98=Error lines
+ScreenName99=Add constant values
 ScreenName9=Connection information
 ShadowSize54=0
 ShowBrandingGraphics=N
@@ -248,57 +249,58 @@ ShowRepositoriesAtStartup=N
 ShowTips=Y
 ShowToolTips=Y
 ShowWelcomePageOnStartup=Y
-SizeH100=541
-SizeH101=308
-SizeH102=524
-SizeH103=469
-SizeH104=1200
-SizeH105=392
-SizeH106=110
-SizeH107=135
-SizeH108=508
-SizeH109=210
+SizeH100=456
+SizeH101=541
+SizeH102=308
+SizeH103=524
+SizeH104=469
+SizeH105=1200
+SizeH106=392
+SizeH107=110
+SizeH108=135
+SizeH109=508
 SizeH10=705
-SizeH110=393
-SizeH111=177
-SizeH112=526
-SizeH113=573
-SizeH114=1040
-SizeH115=129
-SizeH116=369
-SizeH117=752
-SizeH118=386
-SizeH119=454
+SizeH110=210
+SizeH111=393
+SizeH112=177
+SizeH113=526
+SizeH114=573
+SizeH115=1040
+SizeH116=129
+SizeH117=369
+SizeH118=752
+SizeH119=386
 SizeH11=494
-SizeH120=520
-SizeH121=592
-SizeH122=682
-SizeH123=480
-SizeH124=561
-SizeH125=605
-SizeH126=222
-SizeH127=444
-SizeH128=331
-SizeH129=698
+SizeH120=454
+SizeH121=520
+SizeH122=592
+SizeH123=682
+SizeH124=480
+SizeH125=561
+SizeH126=605
+SizeH127=222
+SizeH128=444
+SizeH129=331
 SizeH12=468
-SizeH130=204
-SizeH131=424
-SizeH132=296
-SizeH133=579
-SizeH134=408
-SizeH135=339
-SizeH136=383
-SizeH137=704
-SizeH138=983
-SizeH139=480
+SizeH130=698
+SizeH131=204
+SizeH132=424
+SizeH133=296
+SizeH134=579
+SizeH135=408
+SizeH136=339
+SizeH137=383
+SizeH138=704
+SizeH139=983
 SizeH13=177
-SizeH140=426
-SizeH141=599
-SizeH142=773
-SizeH143=528
-SizeH144=729
+SizeH140=480
+SizeH141=426
+SizeH142=599
+SizeH143=773
+SizeH144=528
+SizeH145=729
 SizeH14=354
-SizeH15=1040
+SizeH15=969
 SizeH16=730
 SizeH17=159
 SizeH18=999
@@ -385,12 +387,12 @@ SizeH90=159
 SizeH91=506
 SizeH92=650
 SizeH93=648
-SizeH94=311
-SizeH95=110
-SizeH96=135
-SizeH97=206
-SizeH98=229
-SizeH99=456
+SizeH94=597
+SizeH95=311
+SizeH96=110
+SizeH97=135
+SizeH98=206
+SizeH99=229
 SizeH9=400
 SizeMax100=N
 SizeMax101=N
@@ -441,6 +443,7 @@ SizeMax141=N
 SizeMax142=N
 SizeMax143=N
 SizeMax144=N
+SizeMax145=N
 SizeMax14=N
 SizeMax15=N
 SizeMax16=N
@@ -536,57 +539,58 @@ SizeMax97=N
 SizeMax98=N
 SizeMax99=N
 SizeMax9=N
-SizeW100=1920
-SizeW101=740
-SizeW102=670
-SizeW103=972
-SizeW104=517
-SizeW105=411
-SizeW106=299
-SizeW107=669
-SizeW108=743
-SizeW109=857
+SizeW100=1092
+SizeW101=1920
+SizeW102=740
+SizeW103=670
+SizeW104=972
+SizeW105=517
+SizeW106=411
+SizeW107=299
+SizeW108=669
+SizeW109=743
 SizeW10=525
-SizeW110=663
-SizeW111=242
-SizeW112=622
-SizeW113=670
-SizeW114=831
-SizeW115=376
-SizeW116=198
-SizeW117=1249
-SizeW118=296
-SizeW119=915
+SizeW110=857
+SizeW111=663
+SizeW112=242
+SizeW113=622
+SizeW114=670
+SizeW115=831
+SizeW116=376
+SizeW117=198
+SizeW118=1249
+SizeW119=296
 SizeW11=1033
-SizeW120=340
-SizeW121=832
-SizeW122=582
-SizeW123=320
-SizeW124=270
-SizeW125=1106
-SizeW126=953
-SizeW127=467
-SizeW128=1036
-SizeW129=678
+SizeW120=915
+SizeW121=340
+SizeW122=832
+SizeW123=582
+SizeW124=320
+SizeW125=270
+SizeW126=1106
+SizeW127=953
+SizeW128=467
+SizeW129=1036
 SizeW12=549
-SizeW130=1093
-SizeW131=754
-SizeW132=1628
-SizeW133=525
-SizeW134=381
-SizeW135=448
-SizeW136=606
-SizeW137=872
-SizeW138=1920
-SizeW139=320
+SizeW130=678
+SizeW131=1093
+SizeW132=754
+SizeW133=1628
+SizeW134=525
+SizeW135=381
+SizeW136=448
+SizeW137=606
+SizeW138=872
+SizeW139=1920
 SizeW13=171
-SizeW140=588
-SizeW141=1920
+SizeW140=320
+SizeW141=588
 SizeW142=1920
-SizeW143=635
-SizeW144=1060
+SizeW143=1920
+SizeW144=635
+SizeW145=1060
 SizeW14=408
-SizeW15=1920
+SizeW15=1680
 SizeW16=750
 SizeW17=316
 SizeW18=940
@@ -673,62 +677,63 @@ SizeW90=182
 SizeW91=1347
 SizeW92=914
 SizeW93=746
-SizeW94=502
-SizeW95=222
-SizeW96=1067
-SizeW97=547
-SizeW98=857
-SizeW99=1092
+SizeW94=648
+SizeW95=502
+SizeW96=222
+SizeW97=1067
+SizeW98=547
+SizeW99=857
 SizeW9=570
-SizeX100=0
-SizeX101=88
-SizeX102=625
-SizeX103=474
-SizeX104=132
-SizeX105=130
-SizeX106=810
-SizeX107=689
-SizeX108=863
-SizeX109=531
+SizeX100=424
+SizeX101=0
+SizeX102=88
+SizeX103=625
+SizeX104=474
+SizeX105=132
+SizeX106=130
+SizeX107=810
+SizeX108=689
+SizeX109=863
 SizeX10=697
-SizeX110=2492
-SizeX111=839
-SizeX112=790
-SizeX113=625
-SizeX114=544
-SizeX115=132
-SizeX116=861
-SizeX117=304
-SizeX118=837
-SizeX119=735
+SizeX110=531
+SizeX111=2492
+SizeX112=839
+SizeX113=790
+SizeX114=625
+SizeX115=544
+SizeX116=132
+SizeX117=861
+SizeX118=304
+SizeX119=837
 SizeX11=443
-SizeX120=790
-SizeX121=636
-SizeX122=669
-SizeX123=286
-SizeX124=242
-SizeX125=110
-SizeX126=483
-SizeX127=808
-SizeX128=442
-SizeX129=650
+SizeX120=735
+SizeX121=790
+SizeX122=636
+SizeX123=669
+SizeX124=286
+SizeX125=242
+SizeX126=110
+SizeX127=483
+SizeX128=808
+SizeX129=442
 SizeX12=685
-SizeX130=413
-SizeX131=583
-SizeX132=146
-SizeX133=697
-SizeX134=286
-SizeX135=736
-SizeX136=538
-SizeX137=286
-SizeX138=0
-SizeX139=154
+SizeX130=650
+SizeX131=413
+SizeX132=583
+SizeX133=146
+SizeX134=697
+SizeX135=286
+SizeX136=736
+SizeX137=538
+SizeX138=286
+SizeX139=0
 SizeX13=874
-SizeX140=666
-SizeX141=0
+SizeX140=154
+SizeX141=666
 SizeX142=0
-SizeX143=642
-SizeX144=618
+SizeX143=0
+SizeX144=642
+SizeX145=618
 SizeX14=2476
 SizeX15=0
 SizeX16=522
@@ -817,64 +822,65 @@ SizeX90=869
 SizeX91=446
 SizeX92=563
 SizeX93=587
-SizeX94=709
-SizeX95=857
-SizeX96=383
-SizeX97=686
-SizeX98=531
-SizeX99=424
+SizeX94=516
+SizeX95=709
+SizeX96=857
+SizeX97=383
+SizeX98=686
+SizeX99=531
 SizeX9=88
-SizeY100=157
-SizeY101=88
-SizeY102=258
-SizeY103=285
-SizeY104=0
-SizeY105=414
-SizeY106=465
-SizeY107=452
-SizeY108=440
-SizeY109=415
+SizeY100=292
+SizeY101=157
+SizeY102=88
+SizeY103=258
+SizeY104=285
+SizeY105=0
+SizeY106=414
+SizeY107=465
+SizeY108=452
+SizeY109=440
 SizeY10=167
-SizeY110=665
-SizeY111=511
-SizeY112=257
-SizeY113=233
-SizeY114=0
-SizeY115=132
-SizeY116=335
-SizeY117=378
-SizeY118=327
-SizeY119=466
+SizeY110=415
+SizeY111=665
+SizeY112=511
+SizeY113=257
+SizeY114=233
+SizeY115=0
+SizeY116=132
+SizeY117=335
+SizeY118=378
+SizeY119=327
 SizeY11=273
-SizeY120=260
-SizeY121=470
-SizeY122=179
-SizeY123=286
-SizeY124=242
-SizeY125=110
-SizeY126=409
-SizeY127=434
-SizeY128=386
-SizeY129=171
+SizeY120=466
+SizeY121=260
+SizeY122=470
+SizeY123=179
+SizeY124=286
+SizeY125=242
+SizeY126=110
+SizeY127=409
+SizeY128=434
+SizeY129=386
 SizeY12=366
-SizeY130=440
-SizeY131=308
-SizeY132=460
-SizeY133=230
-SizeY134=286
-SizeY135=350
-SizeY136=473
-SizeY137=286
-SizeY138=28
-SizeY139=154
+SizeY130=171
+SizeY131=440
+SizeY132=308
+SizeY133=460
+SizeY134=230
+SizeY135=286
+SizeY136=350
+SizeY137=473
+SizeY138=286
+SizeY139=28
 SizeY13=511
-SizeY140=307
-SizeY141=220
-SizeY142=133
-SizeY143=336
-SizeY144=308
+SizeY140=154
+SizeY141=307
+SizeY142=220
+SizeY143=133
+SizeY144=336
+SizeY145=308
 SizeY14=678
-SizeY15=0
+SizeY15=23
 SizeY16=287
 SizeY17=440
 SizeY18=55
@@ -961,12 +967,12 @@ SizeY90=440
 SizeY91=276
 SizeY92=215
 SizeY93=196
-SizeY94=364
-SizeY95=465
-SizeY96=383
-SizeY97=417
-SizeY98=405
-SizeY99=292
+SizeY94=209
+SizeY95=364
+SizeY96=465
+SizeY97=383
+SizeY98=417
+SizeY99=405
 SizeY9=88
 TabColorB54=64
 TabColorB=255
@@ -1052,7 +1058,7 @@ tabdir7=/
 tabdir8=/
 tabdir9=/
 tabfile10=C\:/Users/braymaekers/Desktop/project_setup_bp/framework/content-pdi/control/tr_work_unit_start_check.ktr
-tabfile1=C\:\\Users\\braymaekers\\Documents\\HCP Anywhere\\Project Setup BP\\projects\\framework\\tests\\jb_main_test_executor.kjb
+tabfile1=
 tabfile2=C\:/Users/braymaekers/Documents/GitHub/di-framework/framework/tests/tr_test_executor.ktr
 tabfile3=C\:/Users/braymaekers/Documents/HCP Anywhere/Project Setup BP/projects/framework/content-pdi/tests/execute_test_job.ktr
 tabfile4=C\:/Users/braymaekers/Documents/HCP Anywhere/Project Setup BP/projects/framework/content-pdi/tests/execute_test_trans.ktr
