config-pdi-local

--- a/configuration/config-pdi-local/.kettle/.spoonrc
+++ b/configuration/config-pdi-local/.kettle/.spoonrc
@@ -1,5 +1,5 @@
 #Kettle Properties file
-#Tue Feb 26 14:32:15 CET 2019
+#Tue Feb 26 14:51:18 CET 2019
 AskAboutReplacingDatabases=N
 AutoCollapseCoreObjectsTree=Y
 AutoSave=N
@@ -7,8 +7,10 @@ AutoSplit=N
 BackgroundColorB=255
 BackgroundColorG=255
 BackgroundColorR=255
+CanvasGridSize=32
 DefaultPreviewSize=1000
 DisableBrowserEnvironmentCheck=N
+EnableAntiAliasing54=Y
 EnableAntiAliasing=N
 FontDefaultName=.SF NS Text
 FontDefaultSize=13
@@ -29,6 +31,7 @@ GraphColorB=255
 GraphColorG=255
 GraphColorR=255
 IconSize=32
+IndicateSlowTransSteps=Y
 JobDialogStyle=RESIZE,MAX,MIN
 LastPreviewSize1=100
 LastPreviewStep1=Top and Bottom N
@@ -36,9 +39,12 @@ LastPreviewStep=1
 LineWidth=1
 LogFilter=
 LogLevel=Basic
+MaxLogLineTimeOutMinutes=720
+MaxNrOfLinesInHistory=50
 MaxNrOfLinesInLog=5000
 MaxUndo=100
 MiddlePct=35
+OnlyShowActiveFileInTree=Y
 OpenLastFile=Y
 PluginHistory_0=TextFileInput;10
 PluginHistory_10=ExcelInput;1
@@ -116,17 +122,21 @@ ScreenName56=Script New Values
 ScreenName57=Slave Server dialog
 ScreenName5=Repository information
 ScreenName6=Logging text
-ScreenName7=Write to log 
+ScreenName7=Job
 ScreenName8=Error showing fixed wizard
 ScreenName9=Excel output
 ShadowSize54=0
 ShowBrandingGraphics=N
+ShowCanvasGrid=Y
 ShowCopyOrDistributeWarning=Y
 ShowExitWarning=N
+ShowHelpToolTips=Y
 ShowNewSubtransPopup=Y
+ShowOSLook54=N
 ShowOSLook=N
 ShowRepositoriesAtStartup=N
 ShowTips=Y
+ShowToolTips=Y
 ShowWelcomePageOnStartup=Y
 SizeH10=754
 SizeH11=480
@@ -154,7 +164,7 @@ SizeH30=412
 SizeH31=119
 SizeH32=366
 SizeH33=457
-SizeH34=707
+SizeH34=441
 SizeH35=177
 SizeH36=1200
 SizeH37=605
@@ -182,7 +192,7 @@ SizeH56=999
 SizeH57=235
 SizeH5=152
 SizeH6=592
-SizeH7=675
+SizeH7=718
 SizeH8=468
 SizeH9=354
 SizeMax10=N
@@ -268,7 +278,7 @@ SizeW30=592
 SizeW31=328
 SizeW32=503
 SizeW33=567
-SizeW34=1262
+SizeW34=589
 SizeW35=242
 SizeW36=517
 SizeW37=1106
@@ -296,7 +306,7 @@ SizeW56=940
 SizeW57=623
 SizeW5=495
 SizeW6=832
-SizeW7=1200
+SizeW7=750
 SizeW8=549
 SizeW9=408
 SizeX10=2341
@@ -325,7 +335,7 @@ SizeX30=176
 SizeX31=264
 SizeX32=286
 SizeX33=88
-SizeX34=329
+SizeX34=789
 SizeX35=839
 SizeX36=132
 SizeX37=110
@@ -353,7 +363,7 @@ SizeX56=558
 SizeX57=821
 SizeX5=44
 SizeX6=636
-SizeX7=360
+SizeX7=632
 SizeX8=685
 SizeX9=2476
 SizeY10=305
@@ -382,7 +392,7 @@ SizeY30=176
 SizeY31=264
 SizeY32=286
 SizeY33=88
-SizeY34=169
+SizeY34=379
 SizeY35=511
 SizeY36=0
 SizeY37=110
@@ -410,11 +420,14 @@ SizeY56=55
 SizeY57=471
 SizeY5=44
 SizeY6=470
-SizeY7=185
+SizeY7=196
 SizeY8=366
 SizeY9=678
+TabColorB54=0
 TabColorB=255
+TabColorG54=249
 TabColorG=200
+TabColorR54=0
 TabColorR=200
 TipNr=1
 UseDBCache=Y
@@ -439,8 +452,8 @@ lastdir7=
 lastdir8=
 lastdir9=/
 lastfile10=
-lastfile1=/Users/bepraymaekers/Documents/GitHub/di-framework/framework/tests/jb_test.kjb
-lastfile2=/Users/bepraymaekers/Documents/GitHub/di-framework/framework/tests/jb_main_test_executor.kjb
+lastfile1=/Users/bepraymaekers/Documents/GitHub/di-framework/framework/content-pdi/execution/jb_launcher.kjb
+lastfile2=
 lastfile3=
 lastfile4=
 lastfile5=
@@ -448,7 +461,7 @@ lastfile6=
 lastfile7=
 lastfile8=
 lastfile9=
-lastfiles=2
+lastfiles=1
 lastrepo10=Spoon Data
 lastrepo1=
 lastrepo2=
@@ -471,23 +484,15 @@ lasttype7=N
 lasttype8=N
 lasttype9=N
 lastuser1=
-lastuser2=
 max.ubuntu.os.distribution.supported=16
 min.mac.browser.supported=601
 min.ubuntu.os.distribution.supported=14
 min.windows.browser.supported=11
 tabdir1=/
-tabdir2=/
-tabfile1=/Users/bepraymaekers/Documents/GitHub/di-framework/framework/tests/jb_main_test_executor.kjb
-tabfile2=/Users/bepraymaekers/Documents/GitHub/di-framework/framework/tests/jb_test.kjb
-tabfiles=2
+tabfile1=/Users/bepraymaekers/Documents/GitHub/di-framework/framework/content-pdi/execution/jb_launcher.kjb
+tabfiles=1
 tabopened1=Y
-tabopened2=Y
 tabopentypes1=1
-tabopentypes2=1
 tabrep1=N
-tabrep2=N
 tabrepname1=
-tabrepname2=
 tabtype1=Job
-tabtype2=Job
