--- a/configuration/config-pdi-local/.kettle/.spoonrc
+++ b/configuration/config-pdi-local/.kettle/.spoonrc
@@ -1,5 +1,5 @@
 #Kettle Properties file
-#Tue Feb 26 14:51:18 CET 2019
+#Tue Feb 26 14:59:48 CET 2019
 AskAboutReplacingDatabases=N
 AutoCollapseCoreObjectsTree=Y
 AutoSave=N
@@ -31,7 +31,6 @@ GraphColorB=255
 GraphColorG=255
 GraphColorR=255
 IconSize=32
-IndicateSlowTransSteps=Y
 JobDialogStyle=RESIZE,MAX,MIN
 LastPreviewSize1=100
 LastPreviewStep1=Top and Bottom N
@@ -39,12 +38,9 @@ LastPreviewStep=1
 LineWidth=1
 LogFilter=
 LogLevel=Basic
-MaxLogLineTimeOutMinutes=720
-MaxNrOfLinesInHistory=50
 MaxNrOfLinesInLog=5000
 MaxUndo=100
 MiddlePct=35
-OnlyShowActiveFileInTree=Y
 OpenLastFile=Y
 PluginHistory_0=TextFileInput;10
 PluginHistory_10=ExcelInput;1
@@ -68,133 +64,129 @@ SashWeight1=183
 SashWeight2=816
 SaveConfirmation=Y
 SaveOnlyUsedConnectionsToXML=Y
-ScreenName10=Script Values / Mod
-ScreenName11=Database Explorer on [Spoon]
-ScreenName12=Clustering schema dialog
-ScreenName13=Sort rows
-ScreenName14=Select / Rename values
-ScreenName15=Nr of lines to view.  0 means all lines.
-ScreenName16=Repository explorer on [SpoonData]
-ScreenName17=Job entry details for this transformation\:
-ScreenName18=Join rows
-ScreenName19=New file
+ScreenName10=Database Explorer on [Spoon]
+ScreenName11=Clustering schema dialog
+ScreenName12=Sort rows
+ScreenName13=Select / Rename values
+ScreenName14=Nr of lines to view.  0 means all lines.
+ScreenName15=Repository explorer on [SpoonData]
+ScreenName16=Job entry details for this transformation\:
+ScreenName17=Join rows
+ScreenName18=New file
+ScreenName19=Enter preview size
 ScreenName1=Spoon
-ScreenName20=Enter preview size
-ScreenName21=Split transformation
-ScreenName22=Text file output
-ScreenName23=Database Explorer on [reporting]
-ScreenName24=Error Details
-ScreenName25=Sorted Merge
-ScreenName26=Merge rows
-ScreenName27=Select repository object
-ScreenName28=Table output
-ScreenName29=Preview selection screen
+ScreenName20=Split transformation
+ScreenName21=Text file output
+ScreenName22=Database Explorer on [reporting]
+ScreenName23=Error Details
+ScreenName24=Sorted Merge
+ScreenName25=Merge rows
+ScreenName26=Select repository object
+ScreenName27=Table output
+ScreenName28=Preview selection screen
+ScreenName29=Kettle options...
 ScreenName2=Simple SQL Editor
-ScreenName30=Kettle options...
-ScreenName31=Directory Selection dialog
-ScreenName32=Step fields and their origin
-ScreenName33=Database Value Lookup
-ScreenName34=Job properties
-ScreenName35=Cluster schema
-ScreenName36=View message
-ScreenName37=Results of transformation checks
-ScreenName38=Select the servers
-ScreenName39=ERROR
+ScreenName30=Directory Selection dialog
+ScreenName31=Step fields and their origin
+ScreenName32=Database Value Lookup
+ScreenName33=Job properties
+ScreenName34=Cluster schema
+ScreenName35=View message
+ScreenName36=Results of transformation checks
+ScreenName37=Select the servers
+ScreenName38=ERROR
+ScreenName39=Get System Data
 ScreenName3=Oops\!
-ScreenName40=Get System Data
-ScreenName41=Execute a transformation
-ScreenName42=Examine preview data
-ScreenName43=Filter rows
-ScreenName44=Select an Environment Variable
-ScreenName45=Error\!
-ScreenName46=Content of first file
-ScreenName47=Generate Rows
-ScreenName48=Select a repository
-ScreenName49=Text file input
+ScreenName40=Execute a transformation
+ScreenName41=Examine preview data
+ScreenName42=Filter rows
+ScreenName43=Select an Environment Variable
+ScreenName44=Error\!
+ScreenName45=Content of first file
+ScreenName46=Generate Rows
+ScreenName47=Select a repository
+ScreenName48=Text file input
+ScreenName49=Table input
 ScreenName4=Select the preview step\:
-ScreenName50=Table input
-ScreenName51=Database Explorer on [CA Reporting]
-ScreenName52=Select info type
-ScreenName53=Connection information
+ScreenName50=Database Explorer on [CA Reporting]
+ScreenName51=Select info type
+ScreenName52=Connection information
+ScreenName53=Run Options
 ScreenName54=Hop\: From --> To
 ScreenName55=Transformation properties
 ScreenName56=Script New Values
 ScreenName57=Slave Server dialog
 ScreenName5=Repository information
 ScreenName6=Logging text
-ScreenName7=Job
-ScreenName8=Error showing fixed wizard
-ScreenName9=Excel output
+ScreenName7=Error showing fixed wizard
+ScreenName8=Excel output
+ScreenName9=Script Values / Mod
 ShadowSize54=0
 ShowBrandingGraphics=N
-ShowCanvasGrid=Y
 ShowCopyOrDistributeWarning=Y
 ShowExitWarning=N
-ShowHelpToolTips=Y
 ShowNewSubtransPopup=Y
-ShowOSLook54=N
 ShowOSLook=N
 ShowRepositoriesAtStartup=N
 ShowTips=Y
-ShowToolTips=Y
 ShowWelcomePageOnStartup=Y
-SizeH10=754
-SizeH11=480
-SizeH12=454
-SizeH13=636
-SizeH14=357
-SizeH15=106
-SizeH16=480
-SizeH17=528
-SizeH18=308
-SizeH19=139
+SizeH10=480
+SizeH11=454
+SizeH12=636
+SizeH13=357
+SizeH14=106
+SizeH15=480
+SizeH16=528
+SizeH17=308
+SizeH18=139
+SizeH19=106
 SizeH1=882
-SizeH20=106
-SizeH21=379
-SizeH22=422
-SizeH23=480
-SizeH24=793
-SizeH25=163
-SizeH26=393
-SizeH27=392
-SizeH28=428
-SizeH29=408
+SizeH20=379
+SizeH21=422
+SizeH22=480
+SizeH23=793
+SizeH24=163
+SizeH25=393
+SizeH26=392
+SizeH27=428
+SizeH28=408
+SizeH29=412
 SizeH2=482
-SizeH30=412
-SizeH31=119
-SizeH32=366
-SizeH33=457
-SizeH34=441
-SizeH35=177
-SizeH36=1200
-SizeH37=605
-SizeH38=177
-SizeH39=455
+SizeH30=119
+SizeH31=366
+SizeH32=457
+SizeH33=707
+SizeH34=177
+SizeH35=1200
+SizeH36=605
+SizeH37=177
+SizeH38=455
+SizeH39=567
 SizeH3=514
-SizeH40=567
-SizeH41=920
-SizeH42=773
-SizeH43=387
-SizeH44=882
-SizeH45=826
-SizeH46=752
-SizeH47=205
-SizeH48=654
-SizeH49=983
+SizeH40=920
+SizeH41=773
+SizeH42=387
+SizeH43=882
+SizeH44=826
+SizeH45=752
+SizeH46=205
+SizeH47=654
+SizeH48=983
+SizeH49=704
 SizeH4=108
-SizeH50=704
-SizeH51=480
-SizeH52=561
-SizeH53=400
+SizeH50=480
+SizeH51=561
+SizeH52=400
+SizeH53=571
 SizeH54=175
 SizeH55=567
 SizeH56=999
 SizeH57=235
 SizeH5=152
 SizeH6=592
-SizeH7=718
-SizeH8=468
-SizeH9=354
+SizeH7=468
+SizeH8=354
+SizeH9=754
 SizeMax10=N
 SizeMax11=N
 SizeMax12=N
@@ -242,7 +234,7 @@ SizeMax4=N
 SizeMax50=N
 SizeMax51=N
 SizeMax52=N
-SizeMax53=N
+SizeMax53=Y
 SizeMax54=N
 SizeMax55=N
 SizeMax56=N
@@ -252,182 +244,179 @@ SizeMax6=N
 SizeMax7=N
 SizeMax8=N
 SizeMax9=N
-SizeW10=620
-SizeW11=320
-SizeW12=915
-SizeW13=880
-SizeW14=511
-SizeW15=362
-SizeW16=400
-SizeW17=635
-SizeW18=740
-SizeW19=162
+SizeW10=320
+SizeW11=915
+SizeW12=880
+SizeW13=511
+SizeW14=362
+SizeW15=400
+SizeW16=635
+SizeW17=740
+SizeW18=162
+SizeW19=362
 SizeW1=1440
-SizeW20=362
-SizeW21=924
-SizeW22=705
-SizeW23=320
-SizeW24=549
-SizeW25=254
-SizeW26=663
-SizeW27=411
-SizeW28=616
-SizeW29=381
+SizeW20=924
+SizeW21=705
+SizeW22=320
+SizeW23=549
+SizeW24=254
+SizeW25=663
+SizeW26=411
+SizeW27=616
+SizeW28=381
+SizeW29=592
 SizeW2=557
-SizeW30=592
-SizeW31=328
-SizeW32=503
-SizeW33=567
-SizeW34=589
-SizeW35=242
-SizeW36=517
-SizeW37=1106
-SizeW38=171
-SizeW39=549
+SizeW30=328
+SizeW31=503
+SizeW32=567
+SizeW33=1262
+SizeW34=242
+SizeW35=517
+SizeW36=1106
+SizeW37=171
+SizeW38=549
+SizeW39=580
 SizeW3=581
-SizeW40=580
-SizeW41=1164
-SizeW42=1848
-SizeW43=745
-SizeW44=1200
-SizeW45=568
-SizeW46=1249
-SizeW47=670
-SizeW48=820
-SizeW49=1339
+SizeW40=1164
+SizeW41=1848
+SizeW42=745
+SizeW43=1200
+SizeW44=568
+SizeW45=1249
+SizeW46=670
+SizeW47=820
+SizeW48=1339
+SizeW49=559
 SizeW4=167
-SizeW50=559
-SizeW51=320
-SizeW52=270
-SizeW53=570
+SizeW50=320
+SizeW51=270
+SizeW52=570
+SizeW53=660
 SizeW54=430
 SizeW55=904
 SizeW56=940
 SizeW57=623
 SizeW5=495
 SizeW6=832
-SizeW7=750
-SizeW8=549
-SizeW9=408
-SizeX10=2341
-SizeX11=154
-SizeX12=735
-SizeX13=100
-SizeX14=704
-SizeX15=242
-SizeX16=44
-SizeX17=642
-SizeX18=88
-SizeX19=879
+SizeW7=549
+SizeW8=408
+SizeW9=620
+SizeX10=154
+SizeX11=735
+SizeX12=100
+SizeX13=704
+SizeX14=242
+SizeX15=44
+SizeX16=642
+SizeX17=88
+SizeX18=879
+SizeX19=132
 SizeX1=240
-SizeX20=132
-SizeX21=907
-SizeX22=154
-SizeX23=198
-SizeX24=685
-SizeX25=833
-SizeX26=2492
-SizeX27=130
-SizeX28=132
-SizeX29=286
+SizeX20=907
+SizeX21=154
+SizeX22=198
+SizeX23=685
+SizeX24=833
+SizeX25=2492
+SizeX26=130
+SizeX27=132
+SizeX28=286
+SizeX29=176
 SizeX2=88
-SizeX30=176
-SizeX31=264
-SizeX32=286
-SizeX33=88
-SizeX34=789
-SizeX35=839
-SizeX36=132
-SizeX37=110
-SizeX38=874
-SizeX39=685
+SizeX30=264
+SizeX31=286
+SizeX32=88
+SizeX33=329
+SizeX34=839
+SizeX35=132
+SizeX36=110
+SizeX37=874
+SizeX38=685
+SizeX39=434
 SizeX3=2405
-SizeX40=434
-SizeX41=2011
-SizeX42=1
-SizeX43=772
-SizeX44=0
-SizeX45=676
-SizeX46=304
-SizeX47=2347
-SizeX48=66
-SizeX49=2089
+SizeX40=2011
+SizeX41=1
+SizeX42=772
+SizeX43=0
+SizeX44=676
+SizeX45=304
+SizeX46=2347
+SizeX47=66
+SizeX48=2089
+SizeX49=286
 SizeX4=22
 SizeX50=286
-SizeX51=286
-SizeX52=242
-SizeX53=88
+SizeX51=242
+SizeX52=88
+SizeX53=630
 SizeX54=88
 SizeX55=286
 SizeX56=558
 SizeX57=821
 SizeX5=44
 SizeX6=636
-SizeX7=632
-SizeX8=685
-SizeX9=2476
-SizeY10=305
-SizeY11=154
-SizeY12=466
-SizeY13=481
-SizeY14=421
-SizeY15=242
-SizeY16=44
-SizeY17=336
-SizeY18=88
-SizeY19=530
+SizeX7=685
+SizeX8=2476
+SizeX9=2341
+SizeY10=154
+SizeY11=466
+SizeY12=481
+SizeY13=421
+SizeY14=242
+SizeY15=44
+SizeY16=336
+SizeY17=88
+SizeY18=530
+SizeY19=132
 SizeY1=81
-SizeY20=132
-SizeY21=685
-SizeY22=154
-SizeY23=198
-SizeY24=203
-SizeY25=518
-SizeY26=665
-SizeY27=414
-SizeY28=132
-SizeY29=286
+SizeY20=685
+SizeY21=154
+SizeY22=198
+SizeY23=203
+SizeY24=518
+SizeY25=665
+SizeY26=414
+SizeY27=132
+SizeY28=286
+SizeY29=176
 SizeY2=88
-SizeY30=176
-SizeY31=264
-SizeY32=286
-SizeY33=88
-SizeY34=379
-SizeY35=511
-SizeY36=0
-SizeY37=110
-SizeY38=511
-SizeY39=372
+SizeY30=264
+SizeY31=286
+SizeY32=88
+SizeY33=169
+SizeY34=511
+SizeY35=0
+SizeY36=110
+SizeY37=511
+SizeY38=372
+SizeY39=471
 SizeY3=325
-SizeY40=471
-SizeY41=78
-SizeY42=42
-SizeY43=483
-SizeY44=44
-SizeY45=187
-SizeY46=378
-SizeY47=500
-SizeY48=66
-SizeY49=65
+SizeY40=78
+SizeY41=42
+SizeY42=483
+SizeY43=44
+SizeY44=187
+SizeY45=378
+SizeY46=500
+SizeY47=66
+SizeY48=65
+SizeY49=286
 SizeY4=22
 SizeY50=286
-SizeY51=286
-SizeY52=242
-SizeY53=88
+SizeY51=242
+SizeY52=88
+SizeY53=236
 SizeY54=88
 SizeY55=286
 SizeY56=55
 SizeY57=471
 SizeY5=44
 SizeY6=470
-SizeY7=196
-SizeY8=366
-SizeY9=678
-TabColorB54=0
+SizeY7=366
+SizeY8=678
+SizeY9=305
 TabColorB=255
-TabColorG54=249
 TabColorG=200
-TabColorR54=0
 TabColorR=200
 TipNr=1
 UseDBCache=Y
@@ -452,8 +441,8 @@ lastdir7=
 lastdir8=
 lastdir9=/
 lastfile10=
-lastfile1=/Users/bepraymaekers/Documents/GitHub/di-framework/framework/content-pdi/execution/jb_launcher.kjb
-lastfile2=
+lastfile1=/Users/bepraymaekers/Documents/GitHub/di-framework/framework/tests/jb_test.kjb
+lastfile2=/Users/bepraymaekers/Documents/GitHub/di-framework/framework/content-pdi/execution/jb_launcher.kjb
 lastfile3=
 lastfile4=
 lastfile5=
@@ -461,7 +450,7 @@ lastfile6=
 lastfile7=
 lastfile8=
 lastfile9=
-lastfiles=1
+lastfiles=2
 lastrepo10=Spoon Data
 lastrepo1=
 lastrepo2=
@@ -484,12 +473,13 @@ lasttype7=N
 lasttype8=N
 lasttype9=N
 lastuser1=
+lastuser2=
 max.ubuntu.os.distribution.supported=16
 min.mac.browser.supported=601
 min.ubuntu.os.distribution.supported=14
 min.windows.browser.supported=11
 tabdir1=/
-tabfile1=/Users/bepraymaekers/Documents/GitHub/di-framework/framework/content-pdi/execution/jb_launcher.kjb
+tabfile1=/Users/bepraymaekers/Documents/GitHub/di-framework/framework/tests/jb_test.kjb
 tabfiles=1
 tabopened1=Y
 tabopentypes1=1
