tr_test_executor workspace dir

--- a/configuration/config-pdi-local/.kettle/.spoonrc
+++ b/configuration/config-pdi-local/.kettle/.spoonrc
@@ -1,5 +1,5 @@
 #Kettle Properties file
-#Tue Feb 26 16:23:17 CET 2019
+#Tue Feb 26 16:34:17 CET 2019
 AskAboutReplacingDatabases=N
 AutoCollapseCoreObjectsTree=Y
 AutoSave=N
@@ -109,16 +109,17 @@ ScreenName48=Error\!
 ScreenName49=Select a repository
 ScreenName4=Select the preview step\:
 ScreenName50=Text file input
-ScreenName51=Table input
-ScreenName52=Database Explorer on [CA Reporting]
-ScreenName53=Connection information
-ScreenName54=Select info type
-ScreenName55=Hop\: From --> To
-ScreenName56=Run Options
-ScreenName57=Transformation properties
-ScreenName58=Script New Values
-ScreenName59=Slave Server dialog
+ScreenName51=Get data from XML
+ScreenName52=Table input
+ScreenName53=Database Explorer on [CA Reporting]
+ScreenName54=Connection information
+ScreenName55=Select info type
+ScreenName56=Hop\: From --> To
+ScreenName57=Run Options
+ScreenName58=Transformation properties
+ScreenName59=Script New Values
 ScreenName5=Repository information
+ScreenName60=Slave Server dialog
 ScreenName6=Logging text
 ScreenName7=Write to log 
 ScreenName8=Error showing fixed wizard
@@ -145,7 +146,7 @@ SizeH19=139
 SizeH1=882
 SizeH20=106
 SizeH21=379
-SizeH22=422
+SizeH22=497
 SizeH23=480
 SizeH24=793
 SizeH25=163
@@ -177,16 +178,17 @@ SizeH48=826
 SizeH49=654
 SizeH4=108
 SizeH50=983
-SizeH51=704
-SizeH52=480
-SizeH53=400
-SizeH54=561
-SizeH55=175
-SizeH56=571
-SizeH57=567
-SizeH58=999
-SizeH59=235
+SizeH51=610
+SizeH52=704
+SizeH53=480
+SizeH54=400
+SizeH55=561
+SizeH56=175
+SizeH57=571
+SizeH58=567
+SizeH59=999
 SizeH5=152
+SizeH60=235
 SizeH6=592
 SizeH7=675
 SizeH8=468
@@ -241,11 +243,12 @@ SizeMax52=N
 SizeMax53=N
 SizeMax54=N
 SizeMax55=N
-SizeMax56=Y
-SizeMax57=N
+SizeMax56=N
+SizeMax57=Y
 SizeMax58=N
 SizeMax59=N
 SizeMax5=N
+SizeMax60=N
 SizeMax6=N
 SizeMax7=N
 SizeMax8=N
@@ -263,7 +266,7 @@ SizeW19=162
 SizeW1=1440
 SizeW20=362
 SizeW21=924
-SizeW22=705
+SizeW22=812
 SizeW23=320
 SizeW24=549
 SizeW25=254
@@ -295,16 +298,17 @@ SizeW48=568
 SizeW49=820
 SizeW4=167
 SizeW50=1339
-SizeW51=559
-SizeW52=320
-SizeW53=570
-SizeW54=270
-SizeW55=430
-SizeW56=660
-SizeW57=904
-SizeW58=940
-SizeW59=623
+SizeW51=952
+SizeW52=559
+SizeW53=320
+SizeW54=570
+SizeW55=270
+SizeW56=430
+SizeW57=660
+SizeW58=904
+SizeW59=940
 SizeW5=495
+SizeW60=623
 SizeW6=832
 SizeW7=1200
 SizeW8=549
@@ -354,16 +358,17 @@ SizeX48=676
 SizeX49=66
 SizeX4=22
 SizeX50=2089
-SizeX51=286
+SizeX51=484
 SizeX52=286
-SizeX53=88
-SizeX54=242
-SizeX55=88
-SizeX56=630
-SizeX57=286
-SizeX58=558
-SizeX59=821
+SizeX53=286
+SizeX54=88
+SizeX55=242
+SizeX56=88
+SizeX57=630
+SizeX58=286
+SizeX59=558
 SizeX5=44
+SizeX60=821
 SizeX6=636
 SizeX7=360
 SizeX8=685
@@ -413,16 +418,17 @@ SizeY48=187
 SizeY49=66
 SizeY4=22
 SizeY50=65
-SizeY51=286
+SizeY51=217
 SizeY52=286
-SizeY53=88
-SizeY54=242
-SizeY55=88
-SizeY56=236
-SizeY57=286
-SizeY58=55
-SizeY59=471
+SizeY53=286
+SizeY54=88
+SizeY55=242
+SizeY56=88
+SizeY57=236
+SizeY58=286
+SizeY59=55
 SizeY5=44
+SizeY60=471
 SizeY6=470
 SizeY7=185
 SizeY8=366
@@ -433,10 +439,10 @@ TabColorR=200
 TipNr=1
 UseDBCache=Y
 filetype10=Trans
-filetype1=Job
+filetype1=Trans
 filetype2=Job
 filetype3=Job
-filetype4=Trans
+filetype4=Job
 filetype5=Trans
 filetype6=Trans
 filetype7=Trans
@@ -453,16 +459,16 @@ lastdir7=
 lastdir8=
 lastdir9=/
 lastfile10=
-lastfile1=/Users/bepraymaekers/Documents/GitHub/di-framework/framework/tests/jb_main_test_executor.kjb
-lastfile2=/Users/bepraymaekers/Documents/GitHub/di-framework/framework/tests/jb_test.kjb
-lastfile3=/Users/bepraymaekers/Documents/GitHub/di-framework/framework/content-pdi/execution/jb_launcher.kjb
-lastfile4=
+lastfile1=/Users/bepraymaekers/Documents/GitHub/di-framework/framework/tests/tr_test_executor.ktr
+lastfile2=/Users/bepraymaekers/Documents/GitHub/di-framework/framework/tests/jb_main_test_executor.kjb
+lastfile3=/Users/bepraymaekers/Documents/GitHub/di-framework/framework/tests/jb_test.kjb
+lastfile4=/Users/bepraymaekers/Documents/GitHub/di-framework/framework/content-pdi/execution/jb_launcher.kjb
 lastfile5=
 lastfile6=
 lastfile7=
 lastfile8=
 lastfile9=
-lastfiles=3
+lastfiles=4
 lastrepo10=Spoon Data
 lastrepo1=
 lastrepo2=
@@ -487,22 +493,30 @@ lasttype9=N
 lastuser1=
 lastuser2=
 lastuser3=
+lastuser4=
 max.ubuntu.os.distribution.supported=16
 min.mac.browser.supported=601
 min.ubuntu.os.distribution.supported=14
 min.windows.browser.supported=11
 tabdir1=/
 tabdir2=/
+tabdir3=/
 tabfile1=/Users/bepraymaekers/Documents/GitHub/di-framework/framework/tests/jb_test.kjb
 tabfile2=/Users/bepraymaekers/Documents/GitHub/di-framework/framework/tests/jb_main_test_executor.kjb
-tabfiles=2
+tabfile3=/Users/bepraymaekers/Documents/GitHub/di-framework/framework/tests/tr_test_executor.ktr
+tabfiles=3
 tabopened1=Y
 tabopened2=Y
+tabopened3=Y
 tabopentypes1=1
 tabopentypes2=1
+tabopentypes3=1
 tabrep1=N
 tabrep2=N
+tabrep3=N
 tabrepname1=
 tabrepname2=
+tabrepname3=
 tabtype1=Job
 tabtype2=Job
+tabtype3=Trans
