tr_test_executor
Removed parameter P_WORKSPACE_DIR

--- a/configuration/config-pdi-local/.kettle/.spoonrc
+++ b/configuration/config-pdi-local/.kettle/.spoonrc
@@ -1,5 +1,5 @@
 #Kettle Properties file
-#Tue Feb 26 16:34:17 CET 2019
+#Wed Feb 27 08:28:31 CET 2019
 AskAboutReplacingDatabases=N
 AutoCollapseCoreObjectsTree=Y
 AutoSave=N
@@ -92,34 +92,35 @@ ScreenName32=Step fields and their origin
 ScreenName33=Transformation
 ScreenName34=Database Value Lookup
 ScreenName35=Job properties
-ScreenName36=Cluster schema
-ScreenName37=View message
-ScreenName38=Results of transformation checks
-ScreenName39=Select the servers
+ScreenName36=View message
+ScreenName37=Cluster schema
+ScreenName38=Notes
+ScreenName39=Results of transformation checks
 ScreenName3=Oops\!
-ScreenName40=ERROR
-ScreenName41=Get System Data
-ScreenName42=Examine preview data
+ScreenName40=Select the servers
+ScreenName41=ERROR
+ScreenName42=Get System Data
 ScreenName43=Execute a transformation
-ScreenName44=Filter rows
-ScreenName45=Select an Environment Variable
-ScreenName46=Generate Rows
-ScreenName47=Content of first file
-ScreenName48=Error\!
-ScreenName49=Select a repository
+ScreenName44=Examine preview data
+ScreenName45=Filter rows
+ScreenName46=Select an Environment Variable
+ScreenName47=Error\!
+ScreenName48=Content of first file
+ScreenName49=Generate Rows
 ScreenName4=Select the preview step\:
-ScreenName50=Text file input
-ScreenName51=Get data from XML
+ScreenName50=Select a repository
+ScreenName51=Text file input
 ScreenName52=Table input
-ScreenName53=Database Explorer on [CA Reporting]
-ScreenName54=Connection information
+ScreenName53=Get data from XML
+ScreenName54=Database Explorer on [CA Reporting]
 ScreenName55=Select info type
-ScreenName56=Hop\: From --> To
+ScreenName56=Connection information
 ScreenName57=Run Options
-ScreenName58=Transformation properties
-ScreenName59=Script New Values
+ScreenName58=Hop\: From --> To
+ScreenName59=Transformation properties
 ScreenName5=Repository information
-ScreenName60=Slave Server dialog
+ScreenName60=Script New Values
+ScreenName61=Slave Server dialog
 ScreenName6=Logging text
 ScreenName7=Write to log 
 ScreenName8=Error showing fixed wizard
@@ -161,34 +162,35 @@ SizeH32=366
 SizeH33=720
 SizeH34=457
 SizeH35=707
-SizeH36=177
-SizeH37=1200
-SizeH38=605
-SizeH39=177
+SizeH36=1200
+SizeH37=177
+SizeH38=309
+SizeH39=605
 SizeH3=514
-SizeH40=455
-SizeH41=567
-SizeH42=773
+SizeH40=177
+SizeH41=455
+SizeH42=567
 SizeH43=920
-SizeH44=387
-SizeH45=882
-SizeH46=205
-SizeH47=752
-SizeH48=826
-SizeH49=654
+SizeH44=773
+SizeH45=387
+SizeH46=882
+SizeH47=826
+SizeH48=752
+SizeH49=205
 SizeH4=108
-SizeH50=983
-SizeH51=610
+SizeH50=654
+SizeH51=983
 SizeH52=704
-SizeH53=480
-SizeH54=400
+SizeH53=610
+SizeH54=480
 SizeH55=561
-SizeH56=175
+SizeH56=400
 SizeH57=571
-SizeH58=567
-SizeH59=999
+SizeH58=175
+SizeH59=567
 SizeH5=152
-SizeH60=235
+SizeH60=999
+SizeH61=235
 SizeH6=592
 SizeH7=675
 SizeH8=468
@@ -249,6 +251,7 @@ SizeMax58=N
 SizeMax59=N
 SizeMax5=N
 SizeMax60=N
+SizeMax61=N
 SizeMax6=N
 SizeMax7=N
 SizeMax8=N
@@ -281,34 +284,35 @@ SizeW32=503
 SizeW33=750
 SizeW34=567
 SizeW35=1262
-SizeW36=242
-SizeW37=517
-SizeW38=1106
-SizeW39=171
+SizeW36=517
+SizeW37=242
+SizeW38=446
+SizeW39=1106
 SizeW3=581
-SizeW40=549
-SizeW41=580
-SizeW42=1848
+SizeW40=171
+SizeW41=549
+SizeW42=580
 SizeW43=1164
-SizeW44=745
-SizeW45=1200
-SizeW46=670
-SizeW47=1249
-SizeW48=568
-SizeW49=820
+SizeW44=1848
+SizeW45=745
+SizeW46=1200
+SizeW47=568
+SizeW48=1249
+SizeW49=670
 SizeW4=167
-SizeW50=1339
-SizeW51=952
+SizeW50=820
+SizeW51=1339
 SizeW52=559
-SizeW53=320
-SizeW54=570
+SizeW53=1035
+SizeW54=320
 SizeW55=270
-SizeW56=430
+SizeW56=570
 SizeW57=660
-SizeW58=904
-SizeW59=940
+SizeW58=430
+SizeW59=904
 SizeW5=495
-SizeW60=623
+SizeW60=940
+SizeW61=623
 SizeW6=832
 SizeW7=1200
 SizeW8=549
@@ -341,34 +345,35 @@ SizeX32=286
 SizeX33=661
 SizeX34=88
 SizeX35=329
-SizeX36=839
-SizeX37=132
-SizeX38=110
-SizeX39=874
+SizeX36=132
+SizeX37=839
+SizeX38=737
+SizeX39=110
 SizeX3=2405
-SizeX40=685
-SizeX41=434
-SizeX42=1
+SizeX40=874
+SizeX41=685
+SizeX42=434
 SizeX43=2011
-SizeX44=772
-SizeX45=0
-SizeX46=2347
-SizeX47=304
-SizeX48=676
-SizeX49=66
+SizeX44=1
+SizeX45=772
+SizeX46=0
+SizeX47=676
+SizeX48=304
+SizeX49=2347
 SizeX4=22
-SizeX50=2089
-SizeX51=484
+SizeX50=66
+SizeX51=2089
 SizeX52=286
-SizeX53=286
-SizeX54=88
+SizeX53=484
+SizeX54=286
 SizeX55=242
 SizeX56=88
 SizeX57=630
-SizeX58=286
-SizeX59=558
+SizeX58=88
+SizeX59=286
 SizeX5=44
-SizeX60=821
+SizeX60=558
+SizeX61=821
 SizeX6=636
 SizeX7=360
 SizeX8=685
@@ -401,34 +406,35 @@ SizeY32=286
 SizeY33=196
 SizeY34=88
 SizeY35=169
-SizeY36=511
-SizeY37=0
-SizeY38=110
-SizeY39=511
+SizeY36=0
+SizeY37=511
+SizeY38=368
+SizeY39=110
 SizeY3=325
-SizeY40=372
-SizeY41=471
-SizeY42=42
+SizeY40=511
+SizeY41=372
+SizeY42=471
 SizeY43=78
-SizeY44=483
-SizeY45=44
-SizeY46=500
-SizeY47=378
-SizeY48=187
-SizeY49=66
+SizeY44=42
+SizeY45=483
+SizeY46=44
+SizeY47=187
+SizeY48=378
+SizeY49=500
 SizeY4=22
-SizeY50=65
-SizeY51=217
+SizeY50=66
+SizeY51=65
 SizeY52=286
-SizeY53=286
-SizeY54=88
+SizeY53=217
+SizeY54=286
 SizeY55=242
 SizeY56=88
 SizeY57=236
-SizeY58=286
-SizeY59=55
+SizeY58=88
+SizeY59=286
 SizeY5=44
-SizeY60=471
+SizeY60=55
+SizeY61=471
 SizeY6=470
 SizeY7=185
 SizeY8=366
