updated .spoonrc for config-pdi-local
tab color
grid

--- a/configuration/config-pdi-local/.kettle/.spoonrc
+++ b/configuration/config-pdi-local/.kettle/.spoonrc
@@ -1,5 +1,5 @@
 #Kettle Properties file
-#Wed Feb 27 08:28:31 CET 2019
+#Wed Feb 27 08:53:49 CET 2019
 AskAboutReplacingDatabases=N
 AutoCollapseCoreObjectsTree=Y
 AutoSave=N
@@ -31,6 +31,7 @@ GraphColorB=255
 GraphColorG=255
 GraphColorR=255
 IconSize=32
+IndicateSlowTransSteps=Y
 JobDialogStyle=RESIZE,MAX,MIN
 LastPreviewSize1=100
 LastPreviewStep1=Top and Bottom N
@@ -38,9 +39,12 @@ LastPreviewStep=1
 LineWidth=1
 LogFilter=
 LogLevel=Basic
+MaxLogLineTimeOutMinutes=720
+MaxNrOfLinesInHistory=50
 MaxNrOfLinesInLog=5000
 MaxUndo=100
 MiddlePct=35
+OnlyShowActiveFileInTree=Y
 OpenLastFile=Y
 PluginHistory_0=TextFileInput;10
 PluginHistory_10=ExcelInput;1
@@ -64,137 +68,143 @@ SashWeight1=183
 SashWeight2=816
 SaveConfirmation=Y
 SaveOnlyUsedConnectionsToXML=Y
-ScreenName10=Script Values / Mod
-ScreenName11=Database Explorer on [Spoon]
-ScreenName12=Clustering schema dialog
-ScreenName13=Sort rows
-ScreenName14=Select / Rename values
-ScreenName15=Nr of lines to view.  0 means all lines.
-ScreenName16=Repository explorer on [SpoonData]
-ScreenName17=Job entry details for this transformation\:
-ScreenName18=Join rows
-ScreenName19=New file
-ScreenName1=Spoon
-ScreenName20=Enter preview size
-ScreenName21=Split transformation
-ScreenName22=Text file output
-ScreenName23=Database Explorer on [reporting]
-ScreenName24=Error Details
-ScreenName25=Sorted Merge
-ScreenName26=Merge rows
-ScreenName27=Select repository object
-ScreenName28=Table output
-ScreenName29=Preview selection screen
-ScreenName2=Simple SQL Editor
-ScreenName30=Kettle options...
-ScreenName31=Directory Selection dialog
-ScreenName32=Step fields and their origin
-ScreenName33=Transformation
-ScreenName34=Database Value Lookup
-ScreenName35=Job properties
-ScreenName36=View message
-ScreenName37=Cluster schema
-ScreenName38=Notes
-ScreenName39=Results of transformation checks
-ScreenName3=Oops\!
-ScreenName40=Select the servers
-ScreenName41=ERROR
-ScreenName42=Get System Data
-ScreenName43=Execute a transformation
-ScreenName44=Examine preview data
-ScreenName45=Filter rows
-ScreenName46=Select an Environment Variable
-ScreenName47=Error\!
-ScreenName48=Content of first file
-ScreenName49=Generate Rows
-ScreenName4=Select the preview step\:
-ScreenName50=Select a repository
-ScreenName51=Text file input
-ScreenName52=Table input
-ScreenName53=Get data from XML
-ScreenName54=Database Explorer on [CA Reporting]
-ScreenName55=Select info type
-ScreenName56=Connection information
-ScreenName57=Run Options
-ScreenName58=Hop\: From --> To
-ScreenName59=Transformation properties
-ScreenName5=Repository information
-ScreenName60=Script New Values
-ScreenName61=Slave Server dialog
-ScreenName6=Logging text
-ScreenName7=Write to log 
-ScreenName8=Error showing fixed wizard
-ScreenName9=Excel output
+ScreenName10=Excel output
+ScreenName11=Script Values / Mod
+ScreenName12=Database Explorer on [Spoon]
+ScreenName13=Clustering schema dialog
+ScreenName14=Sort rows
+ScreenName15=Select / Rename values
+ScreenName16=Nr of lines to view.  0 means all lines.
+ScreenName17=Repository explorer on [SpoonData]
+ScreenName18=Job entry details for this transformation\:
+ScreenName19=Join rows
+ScreenName1=Kettle Options
+ScreenName20=New file
+ScreenName21=Enter preview size
+ScreenName22=Split transformation
+ScreenName23=Text file output
+ScreenName24=Database Explorer on [reporting]
+ScreenName25=Error Details
+ScreenName26=Sorted Merge
+ScreenName27=Merge rows
+ScreenName28=Select repository object
+ScreenName29=Table output
+ScreenName2=Spoon
+ScreenName30=Preview selection screen
+ScreenName31=Kettle options...
+ScreenName32=Directory Selection dialog
+ScreenName33=Step fields and their origin
+ScreenName34=Transformation
+ScreenName35=Database Value Lookup
+ScreenName36=Job properties
+ScreenName37=View message
+ScreenName38=Cluster schema
+ScreenName39=Notes
+ScreenName3=Simple SQL Editor
+ScreenName40=Results of transformation checks
+ScreenName41=Select the servers
+ScreenName42=ERROR
+ScreenName43=Get System Data
+ScreenName44=Execute a transformation
+ScreenName45=Examine preview data
+ScreenName46=Filter rows
+ScreenName47=Select an Environment Variable
+ScreenName48=Error\!
+ScreenName49=Content of first file
+ScreenName4=Oops\!
+ScreenName50=Generate Rows
+ScreenName51=Select a repository
+ScreenName52=Text file input
+ScreenName53=Table input
+ScreenName54=Get data from XML
+ScreenName55=Database Explorer on [CA Reporting]
+ScreenName56=Select info type
+ScreenName57=Connection information
+ScreenName58=Run Options
+ScreenName59=Hop\: From --> To
+ScreenName5=Select the preview step\:
+ScreenName60=Transformation properties
+ScreenName61=Script New Values
+ScreenName62=Slave Server dialog
+ScreenName6=Repository information
+ScreenName7=Logging text
+ScreenName8=Write to log 
+ScreenName9=Error showing fixed wizard
 ShadowSize54=0
 ShowBrandingGraphics=N
+ShowCanvasGrid=Y
 ShowCopyOrDistributeWarning=Y
 ShowExitWarning=N
+ShowHelpToolTips=Y
 ShowNewSubtransPopup=Y
+ShowOSLook54=N
 ShowOSLook=N
 ShowRepositoriesAtStartup=N
 ShowTips=Y
+ShowToolTips=Y
 ShowWelcomePageOnStartup=Y
-SizeH10=754
-SizeH11=480
-SizeH12=454
-SizeH13=636
-SizeH14=357
-SizeH15=106
-SizeH16=480
-SizeH17=528
-SizeH18=308
-SizeH19=139
-SizeH1=882
-SizeH20=106
-SizeH21=379
-SizeH22=497
-SizeH23=480
-SizeH24=793
-SizeH25=163
-SizeH26=393
-SizeH27=392
-SizeH28=428
-SizeH29=408
-SizeH2=482
-SizeH30=412
-SizeH31=119
-SizeH32=366
-SizeH33=720
-SizeH34=457
-SizeH35=707
-SizeH36=1200
-SizeH37=177
-SizeH38=309
-SizeH39=605
-SizeH3=514
-SizeH40=177
-SizeH41=455
-SizeH42=567
-SizeH43=920
-SizeH44=773
-SizeH45=387
-SizeH46=882
-SizeH47=826
-SizeH48=752
-SizeH49=205
-SizeH4=108
-SizeH50=654
-SizeH51=983
-SizeH52=704
-SizeH53=610
-SizeH54=480
-SizeH55=561
-SizeH56=400
-SizeH57=571
-SizeH58=175
-SizeH59=567
-SizeH5=152
-SizeH60=999
-SizeH61=235
-SizeH6=592
-SizeH7=675
-SizeH8=468
-SizeH9=354
+SizeH10=354
+SizeH11=754
+SizeH12=480
+SizeH13=454
+SizeH14=636
+SizeH15=357
+SizeH16=106
+SizeH17=480
+SizeH18=528
+SizeH19=308
+SizeH1=601
+SizeH20=139
+SizeH21=106
+SizeH22=379
+SizeH23=497
+SizeH24=480
+SizeH25=793
+SizeH26=163
+SizeH27=393
+SizeH28=392
+SizeH29=428
+SizeH2=882
+SizeH30=408
+SizeH31=412
+SizeH32=119
+SizeH33=366
+SizeH34=720
+SizeH35=457
+SizeH36=707
+SizeH37=1200
+SizeH38=177
+SizeH39=309
+SizeH3=482
+SizeH40=605
+SizeH41=177
+SizeH42=455
+SizeH43=567
+SizeH44=920
+SizeH45=773
+SizeH46=387
+SizeH47=882
+SizeH48=826
+SizeH49=752
+SizeH4=514
+SizeH50=205
+SizeH51=654
+SizeH52=983
+SizeH53=704
+SizeH54=610
+SizeH55=480
+SizeH56=561
+SizeH57=400
+SizeH58=571
+SizeH59=175
+SizeH5=108
+SizeH60=567
+SizeH61=999
+SizeH62=235
+SizeH6=152
+SizeH7=592
+SizeH8=675
+SizeH9=468
 SizeMax10=N
 SizeMax11=N
 SizeMax12=N
@@ -246,12 +256,13 @@ SizeMax53=N
 SizeMax54=N
 SizeMax55=N
 SizeMax56=N
-SizeMax57=Y
-SizeMax58=N
+SizeMax57=N
+SizeMax58=Y
 SizeMax59=N
 SizeMax5=N
 SizeMax60=N
 SizeMax61=N
+SizeMax62=N
 SizeMax6=N
 SizeMax7=N
 SizeMax8=N
@@ -440,7 +451,9 @@ SizeY7=185
 SizeY8=366
 SizeY9=678
 TabColorB=255
+TabColorG54=249
 TabColorG=200
+TabColorR54=0
 TabColorR=200
 TipNr=1
 UseDBCache=Y
